codex-rs/astral-tui/src/snapshots/astral_tui__view_tests__local_image_chip_prompt_snapshot.snap
---
source: astral-tui/src/view_tests.rs
expression: "format!(\"{}\\n\\nchip mask:\\n{}\", buffer_text(&buffer),\nselection_mask(&buffer, theme.panel_selected))"
---
╭──────────────────────────────────────────────────╮
│ ❯ inspect [Image #1] before submitting           │
│                                                  │
╰────────────────────────────────────────── gpt-5 ─╯

chip mask:

            ^^^^^^^^^^
