codex-rs/astral-tui/src/snapshots/astral_tui__view_tests__plan_review_controls_snapshot.snap
---
source: astral-tui/src/view_tests.rs
expression: buffer_text(&buffer)
---
Implement this plan?
› 1. Yes, implement this plan          Switch to Default and start coding.
  2. Yes, clear context and implement  Fresh thread with this plan.
  3. No, stay in Plan mode             Continue planning with the model.
