codex-rs/astral-tui/src/snapshots/astral_tui__view_tests__plan_revision_controls_snapshot.snap
---
source: astral-tui/src/view_tests.rs
expression: buffer_text(&buffer)
---
Implement this plan?
enter request changes · tab plan · esc back
