codex-rs/astral-tui/src/snapshots/astral_tui__view_tests__prompt_wrap_and_mid_buffer_cursor_snapshot.snap
---
source: astral-tui/src/view_tests.rs
expression: buffer_text(&buffer)
---
╭────────────────────────────────╮
│ ❯ A long prompt wraps before   │
│ this                           │
│ and keeps editing here         │
│                                │
╰────────────── gpt-5 · default ─╯
