codex-rs/astral-tui/src/snapshots/astral_tui__view_tests__shell_prompt_snapshot.snap
---
source: astral-tui/src/view_tests.rs
expression: buffer_text(&buffer)
---
╭──────────────────────────────────────────────────╮
│ ! printf 'ASTRAL_SHELL_OK\n'                     │
╰────────────────────────────── Run shell command ─╯
