codex-rs/astral-tui/src/snapshots/astral_tui__view_tests__wrapped_prompt_selection_snapshot.snap
---
source: astral-tui/src/view_tests.rs
expression: "format!(\"{}\\n\\nselection mask:\\n{}\", buffer_text(&buffer),\nselection_mask(&buffer, theme.prompt_selection_background))"
---
╭──────────────────────╮
│ ❯ alpha beta gamma   │
│ delta                │
│                      │
│                      │
╰────────────── gpt-5 ─╯

selection mask:

          ^^^^^^^^^^
